--- a/ex004/style.css
+++ b/ex004/style.css
@@ -7,15 +7,26 @@
     font: normal 18px Arial, sans-serif;
 }
 
+body {
+    background-color: #d3c7e9;
+}
+
+header > h1 {
+    font-weight: bold;
+    font-size: 1.4em;
+    margin: 20px 0px;
+    text-align: center;
+}
+
 form {
     width: 300px;
     background-color: #7b43e2;
-    margin: 10px;
+    margin: auto;
     padding: 15px;
     border-radius: 15px;
 }
 
-form > p {
+form > div {
     margin-bottom: 15px;
     color: white;
 }
@@ -38,4 +49,8 @@ form input {
     margin-top: 12.5px;
     padding: 15px;
     cursor: pointer;
+}
+
+.botao_enviar:focus {
+    box-shadow: 1px 1px 1px black;
 }
