--- a/ex004/style.css
+++ b/ex004/style.css
@@ -4,7 +4,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font: normal 18px Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
     outline: none;
     border: none;
 }
@@ -20,7 +21,7 @@ header > h1 {
     text-align: center;
 }
 
-form {
+form, main {
     width: 300px;
     background-color: #7b43e2;
     margin: auto;
@@ -55,4 +56,12 @@ form input {
 #botao_enviar:focus {
     outline: 1.2px solid black;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.486);
+}
+
+main p {
+    margin: 10px 0px;
+}
+
+main a {
+    color: black;
 }
